# third_party_openhitls

./: BUILD.gn  OAT.xml  README.OpenSource  README_OpenHarmony.md  bundle.json
patches/: patches.json
pki/x509_common/src/: hitls_x509_common.c
pki/x509_verify/src/: hitls_x509_verify.c
testcode/framework/tls/rpc/src/: hlt_func.c
